<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal">

    <TextView
        android:id="@+id/textView"
        android:layout_width="322dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/ptitulo"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnp2"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="112dp"
        android:text="@string/btn2p1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnsalir"
        android:layout_width="111dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btnsalir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnp1"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="112dp"
        android:text="@string/btn1p1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fvcontendenor"
        android:name="mx.edu.tesoem.isc.examenfragment.SegundoFragment"
        android:layout_width="393dp"
        android:layout_height="484dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>