<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrimerFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="250dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/textresultados"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblcalificacion"
        android:layout_width="297dp"
        android:layout_height="57dp"
        android:layout_marginTop="56dp"
        android:gravity="center_vertical"
        android:text="@string/lblcalificacion"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblfallos" />

    <TextView
        android:id="@+id/lblfallos"
        android:layout_width="297dp"
        android:layout_height="57dp"
        android:layout_marginTop="64dp"
        android:gravity="center_vertical"
        android:text="@string/lblerrores"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblaciertos" />

    <TextView
        android:id="@+id/lblaciertos"
        android:layout_width="297dp"
        android:layout_height="57dp"
        android:layout_marginTop="64dp"
        android:gravity="center_vertical"
        android:text="@string/lblaciertos"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>